# sentinel

./: .gitignore  AUDIT_SYSTEM.md  Cargo.toml  DISTRIBUTION.md  README.md  SECURITY_FIXES.md  env.audit.example  install.ps1  install.sh
.github/workflows/: release.yml
Formula/: sentinel.rb
docs/: USAGE.md
frontend/my-react-flow-app/: index.html  package-lock.json  package.json
frontend/my-react-flow-app/src/: App.tsx  index.css  main.tsx  types.ts
frontend/my-react-flow-app/src/components/: EventTimeline.tsx  Graph.tsx  NodeDetails.tsx
frontend/my-react-flow-app/src/hooks/: useWebSocket.ts
python/: __init__.py  audit_crypto.py  audit_logger.py  audit_store.py
src/: audit.rs  audit_crypto.rs  config.rs  decrypt_audit_log.rs  events.rs  frontend.rs  keygen.rs  main.rs  panic.rs  parser.rs  proxy.rs  server.rs  session.rs
src/audit/: README.md  anomaly-detector.ts  append-only-store.ts  config.ts  crypto.ts  index.ts  integration-example.ts  opentelemetry-tracing.ts  package.json  pii-tokenizer.ts  siem-forwarder.ts  tamper-evident-logger.ts  tsconfig.json
