[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[[bin]]
name = "crypto-engine"
path = "src/bin/crypto-engine.rs"

[[bin]]
name = "log-signer"
path = "src/bin/log-signer.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
rust-embed = "8"
tokio-stream = { version = "0.1", features = ["sync"] } # enable sync feature for BroadcastStream
mime_guess = "2.0"
aho-corasick = "1"
regex = "1"
dirs = "5"
lazy_static = "1"
hex = "0.4"

[profile.release]
lto = "fat"
opt-level = "z"
strip = true
