[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engram-sentinel"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.24", features = ["tls"] }
rust-embed = "8"
tokio-stream = { version = "0.1", features = ["sync"] } # enable sync feature for BroadcastStream
uuid = {version = "1.19.0", features = ["v4"]}
mime_guess = "2.0"
aho-corasick = "1"
regex = "1"
dirs = "5"
lazy_static = "1"
anyhow = "1.0"
base64 = "0.22"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
zeroize = "1"
tempfile = "3"


[profile.release]
lto = "fat"
opt-level = "z"
strip = true
